# MirrorPilot

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Doc/: centos8-tauri-deps.sh  起草.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/modules/: builtin_sources.rs  config_manager.rs  file_scanner.rs  mod.rs  network_tester.rs  platform_detector.rs  shell_executor.rs  silent_command.rs  source_registry.rs  types.rs
frontend/src/components/: AboutPage.tsx  CacheManager.tsx  SettingsPage.tsx  Sidebar.tsx  SourceManager.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
