[package]
name = "mirrorpilot"
version = "0.2.0"
description = "MirrorPilot - 镜像领航员，统一管理开发环境中各包管理器的镜像源配置"
authors = ["MirrorPilot Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
dirs = "6"
rusqlite = { version = "0.34", features = ["bundled"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# ponytail: quick-xml removed, never used (XML parsed by string find)
# ponytail: regex removed, never used
# ponytail: thiserror removed, never used (errors are manual format!)
uuid = { version = "1", features = ["v4"] }
which = "7"
# ponytail: once_cell removed, unused (stdlib LazyLock since 1.80)
